# MonsterUI

./: .gitignore  CHANGELOG.bak  CHANGELOG.md  README.md  pyproject.toml  settings.ini
.github/workflows/: llms.yaml
docs/: apilist.txt  llms-ctx-full.txt  llms-ctx.txt  llms.txt  main.py  requirements.txt  utils.py
docs/api_reference/: api_reference.py
docs/examples/: dashboard.py  tasks.py
monsterui/: _modidx.py  core.py  daisy.py  foundations.py  franken.py
nbs/: 00_foundation.ipynb  01_core.ipynb  02_franken.ipynb  03_daisy.ipynb
